--- a/WorkoutLogger/src/index.html
+++ b/WorkoutLogger/src/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <title>Workout Logger</title>
-    <link rel="stylesheet" href="css/zimit.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="c12">
+        <div class="col-md-4 offset-md-4">
             <div id="app">
 
             </div>
@@ -17,7 +17,7 @@
 
 
 <script src="js/jquery-3.4.0.min.js"></script>
-<script src="js/zimit.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
